--- a/src/views/airTrail.html
+++ b/src/views/airTrail.html
@@ -16,6 +16,6 @@ body,html{
 }
 </style>
 <body>
-  
+  <img src="https://s2.ax1x.com/2019/11/16/M0TPyD.png" style="display:none" alt="">
 </body>
 </html>
