部分全景图

--- a/src/views/MicroScene1.html
+++ b/src/views/MicroScene1.html
@@ -16,6 +16,6 @@ body,html{
 }
 </style>
 <body>
-  <img src="https://s2.ax1x.com/2019/11/16/M0Huqg.png" style="display:none" alt="">
+  <img src="https://s2.ax1x.com/2019/11/25/MjQnVU.png" style="display:none" alt="">
 </body>
 </html>
